--- a/projectfolder/covid.html
+++ b/projectfolder/covid.html
@@ -3,24 +3,28 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Parts Unknow - Covid Travel Guidelines</title>
-
+        <title>Parts Unknown - Covid Travel Guidelines</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <header>
             <nav>
-                <a href="index.html" tabindex="1"><strong>Home</strong></a> <span>|</span>
-                <a href="covid.html" tabindex="2"><strong>Covid Travel Guidelines</strong></a><span>|</span>
-                <a href="hk.html" tabindex="3"><strong>Hong Kong</strong></a><span>|</span>
-                <a href="cuba.html" tabindex="4"><strong>Cuba</strong></a>
-                <input type="text" placeholder="Search..">
+                    <a href="index.html" tabindex="2"><strong>HOME</strong></a> <span>|</span>
+                    <a href="covid.html" tabindex="3"><strong>COVID TRAVEL GUIDELINES</strong></a> <span>|</span>
+                    <a href="hk.html" tabindex="4"><strong>HONG KONG</strong></a> <span>|</span>
+                    <a href="cuba.html" tabindex="5"><strong>CUBA</strong></a>
+                <div class="search">
+                    <input type="text" placeholder="Search..">
+                </div>
             </nav>
         </header>
 
         <main>
 
-            <h1>Covid Travel Guidelines</h1>
+            <div id="title">
+            <h1>COVID TRAVEL GUIDELINES</h1>
+            </div>
 
             <p>
                 Although travelling is something we all love to do, with the current global Covid-19 pandemic the way we travel has changed drastically. At least for the time being, the rules for international travel are being shaped by Covid-19 health and safety regulation as countries scramble to get the virus under control.  It is important to stay informed on both health and safety precautions as well as country specific guidelines for travel.
