--- a/projectfolder/covid.html
+++ b/projectfolder/covid.html
@@ -22,6 +22,8 @@
             </nav>
         </header>
 
+        <a href="#maincontent" id="skip" tabindex="1">Skip to Content</a>
+
         <main>
 
             <div class="covidtext">
@@ -29,6 +31,8 @@
                 <h1>COVID TRAVEL GUIDELINES</h1>
                 </div>
 
+                <a id="maincontent"></a>
+                
                 <p>
                     Although travelling is something we all love to do, with the current global Covid-19 pandemic the way we travel has changed drastically. At least for the time being, the rules for international travel are being shaped by Covid-19 health and safety regulation as countries scramble to get the virus under control.  It is important to stay informed on both health and safety precautions as well as country specific guidelines for travel.
                 </p>
